Modifed config to reflect cluster resources